src/test/deca/test_compilateur/context/valid/created/decl_class/classe.deca
// Description :
//		une classe simple
//
// Resultats :
//		Ok


class A{
	int x;
	int y;
	int met(){
	}
	float met2(int arg1){
		return 0.5;
	}
}

{
A a = new A();
a.met2(1);
}