src/test/deca/test_compilateur/context/invalid/created/assign/assign_class_float.deca
// Description :
//    test  assign entre une classe et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: (3.28) Les types A et float sont incompatibles pour l’affectation

class A {}
{
A a = new A();
float b;
b = a;
}